--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap");
+
+:root {
+    --gold-stellar: #FFCC66;
+    --spatial-blue: #0A1E3F;
+    --spatial-blue-transparent: rgba(10, 30, 63, 0.3);
+    --void_black: #0B0B0F;
+    --white_moon: #FFFFFF;
+}
+
 *{
     margin: 0;
 }
@@ -7,8 +18,80 @@ html{
 }
 
 body{
+    font-family: 'Poppins', cursive;
     min-height:100vh;
+    background-image: url('../img/fond_Univers.png');
     background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
     display:flex;
     flex-direction:column;
+    color: var(--gold-stellar);
+}
+
+
+/********************************
+*********Navbar Section**********
+********************************/
+.navbar{
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center; 
+    gap:20px;
+    padding: 20px 0;
+    background-color: var(--spatial-blue-transparent);
+    box-shadow: 0px 5px 20px var(--void_black);
+}
+
+.navbar-title{
+    font-family: 'Audiowide', cursive;
+    font-weight: 1000;
+    font-size: 2.5rem; 
+    text-align: center;
+    margin-bottom: 10px;
+    text-shadow: 0 0 6px var(--gold-stellar);
+}
+
+.navbar-links{
+    display: inline-flex;
+    justify-content: center;
+    background-color: var(--spatial-blue);
+    border: 2px solid var(--gold-stellar);
+    border-radius:20px;
+    box-shadow: 12px 6px 20px 8px var(--void_black);
+      
+}
+
+.navbar .navLink{
+    display: block;
+    padding: 1rem 1.5rem;
+    text-align: center;
+    color: var(--gold-stellar);
+    text-decoration: none;
+    font-weight: bold;
+    text-shadow: 0 0 6px var(--gold-stellar);
+    transition: color 0.3s ease, text-shadow 0.3s ease, transform 0.1s;
+    box-sizing: border-box;
+    border-radius:10px;
+}
+
+.navbar .navLink:hover{
+    color: var(--white_moon);
+    text-shadow: 0 0 8px var(--white_moon);
+    transform: scale(1.02);
+}
+
+/********************************
+******Main content Section*******
+********************************/
+.content{
+    flex:1;
+    display:flex;
+    flex-direction:column;
+    text-align:center;
+    justify-content:center;
+    margin:0px 30px 30px;
+    padding-top:25px;
 }
