--- a/src/css/App.css
+++ b/src/css/App.css
@@ -37,10 +37,12 @@ body{
     flex-direction: column;
     justify-content:center;
     align-items: center; 
+    max-height: 180px;
     gap:20px;
     padding: 20px 0;
     background-color: var(--spatial-blue-transparent);
     box-shadow: 0px 5px 20px var(--void_black);
+    transition: background-color 1s ease, box-shadow 1s ease;
 }
 
 .header-title{
@@ -63,14 +65,31 @@ body{
 }
 
 .navbar-sticky-container {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     right: 0;
+    padding-bottom:20px;
     z-index: 1000;
     display: flex;
     justify-content: center;
-    background: transparent;
+    background-color: var(--spatial-blue-transparent);
+    box-shadow: 0px 5px 20px var(--void_black);
+    transition: background-color 1s ease, box-shadow 1s ease;
+}
+
+.navbar-sticky-container-hidden {
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding-bottom:20px;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    background-color: transparent !important;
+    box-shadow: none !important;
+    transition: background-color 1s ease, box-shadow 1s ease;
 }
 
 .navbar-sticky {
