--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -106,7 +106,6 @@
     font-size: 1.8rem;
 }
 
-
 .contact-links a{
     color: var(--gold-stellar);
     text-decoration: none;
@@ -114,7 +113,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    transition: color 0.2s ease-in-out;
+    transition: color 0.2s ease-in-out, text-shadow 0.3s ease;
 }
 
 .contact-links a:hover {
