created new css files for elements in app.css + changed scrolltotopbutton look + added active page effect in navbar + added some little icons

--- a/src/css/EmailConfirmation.css
+++ b/src/css/EmailConfirmation.css
@@ -42,3 +42,8 @@
     transform: scale(1.05);
     text-shadow: 0 0 8px var(--white_moon);
 }
+
+.emailconfirmation-link-icon{
+    text-align:center;
+    margin-right:5px;
+}
