added cv download in contact page + changed the contact container css

--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -39,11 +39,12 @@
     width: 800px;
     margin: 0 auto;
     padding: 2rem;
-    background-color: var(--spatial-blue-transparent);
     border-radius: 12px;
-    box-shadow: 0 0 10px var(--void_black);
-    color: var(--gold-stellar);
     text-align: center;
+    background-color: var(--spatial-blue-background);
+    border: 1px solid var(--gold-stellar);
+    border-radius: 15px;
+    box-shadow: 0 0 15px var(--void_black);
 }
 
 .contact-title {
@@ -72,7 +73,8 @@
 }
 
 .contact-form textarea{
-    height:100px;
+    min-height:100px;
+    max-height:500px;
 }
 
 .contact-form input:focus,
@@ -153,4 +155,45 @@
 .contact-links a:hover {
     color: var(--white_moon);
     text-shadow: 0 0 6px var(--white_moon);
+}
+
+/*********************************
+********Contact CV section********
+*********************************/
+.contact-cv{
+    margin-top:20px;
+}
+
+.cv-download-btn {
+    display: inline-block;
+    margin-top:20px;
+    padding: 10px 20px;
+    border-radius: 12px;
+    border: 2px solid var(--gold-stellar);
+    background-color: var(--spatial-blue);
+    color: var(--gold-stellar);
+    cursor: pointer;
+    transition: background-color 0.3s,
+                color 0.3s,
+                box-shadow 0.3s ease,
+                transform 0.1s,
+                text-shadow 0.3s ease;
+    box-shadow: 12px 8px 25px 10px var(--void_black);
+    margin-top:25px;
+    text-decoration:none;
+    text-shadow: 0 0 6px var(--gold-stellar);
+    font-size: 1rem;
+    margin:auto;
+    
+}
+
+.cv-download-btn:hover {
+    color: var(--white_moon);
+    box-shadow: 14px 10px 30px 12px var(--void_black);
+    transform: scale(1.03);
+    text-shadow: 0 0 8px var(--white_moon);
+}
+
+.cv-download-icon {
+    margin-right:10px;
 }
