--- a/src/css/Skills.css
+++ b/src/css/Skills.css
@@ -62,13 +62,13 @@
     border-radius: 15px;
     width:30vw;
     padding: 30px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .skill-card:hover {
     transform: translateY(-5px);
     box-shadow: 0 0 15px var(--gold-stellar);
-    background-color: var(--spatial-blue-background);
+
 }
 
 .skill-icon {
@@ -99,19 +99,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding : 10px;
-    border-radius : 90%;
+    padding : 12px;
+    border-radius : 50%;
     width: 125px;
     height:125px;
-    transition: background 0.3s ease, color 0.3s ease;
-    color: var(--gold-stellar);
+    background-color: transparent;
+    transition: transform 0.5s ease,
+                box-shadow 0.3s ease,
+                border 0.3s ease;
 }
 
 .skill-item:hover{
-    background-color : var(--gold-stellar);
-    color: var(--spatial-blue);
-    cursor : pointer;
+    transform: translateY(-7px);
+    box-shadow: 0 0 30px rgba(255, 204, 102, 0.5);
+    border: 1px solid var(--gold-stellar);
 }
+
+.skill-item:hover .skill-logo, .skill-item:hover .skill-name {
+    transform: scale(1.1);
+    transition: transform 0.5s ease;
+}
+
+
 
 .skill-logo {
     width: 60px;
@@ -123,10 +132,4 @@
 .skill-name{
     font-size: 1rem;
     
-}
-
-
-@keyframes fadeIn {
-    from { opacity: 0; transform: translateY(10px); }
-    to { opacity: 1; transform: translateY(0); }
 }
