added responsive rules for contact / emailconfirmation / notfound404 /scrolltotopbutton

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -30,13 +30,13 @@ body{
 }
 
 
-
-
 /********************************
 ******Main content Section*******
 ********************************/
+/*main content of the site*/
 .content {
     overflow : hidden;
+    min-height:80vh;
     max-width: 90vw;
     margin: auto;
     margin-top: 40px;
