--- a/src/css/ScrollToTopButton.css
+++ b/src/css/ScrollToTopButton.css
@@ -40,3 +40,16 @@
 .scroll-to-top-btn-icon:hover{
     color:var(--white_moon);
 }
+
+/********************************
+****** Responsive Rules *********
+********************************/
+/* Mobiles (no tablets) */
+@media (max-width: 599px) {
+    .scroll-to-top-btn {
+        bottom: 15px;
+        right: 15px;
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+}
